# SEPlib

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  NOTE_AUTOMAKE  README.md  RPM_BUILD_DISTR  RPM_BUILD_LOCAL  RUN_THIS  RUN_THIS.gcc  RUN_THIS.icc  RUN_THIS.linux  RUN_THIS.mac  RUN_THIS.sep  SEPlibConfig.cmake  SEPlibConfig.cmake.in  configure  configure.ac  divide.f  sepConfig.h.in  seplib-distr.spec  seplib-local.spec
config/: Makefile.am  Makefile.in  configure  configure.ac
config/include/: CMakeLists.txt  Doc.defs.top.in  Doc.rules.fig  Makefile.am  Makefile.in  Prog.defs.compile  Prog.defs.compile.in  Prog.rules.F90  SEP.generic.defs.in  SEP.top  SEP.top.in  local.defs.in
config/m4/: sep_fc.m4
docs/html/: Makefile.am  Makefile.in
docs/html/interact/: Makefile.am
docs/html/seplib_base/: Makefile.am  Makefile.in
docs/html/seplib_prog/: Makefile.am  Makefile.in
docs/html/vplot/: Makefile.am  Makefile.in
docs/pod/: Makefile.am  Makefile.in
docs/pod/interact/: Makefile.am
docs/pod/seplib_base/: Makefile.am  Makefile.in
docs/pod/seplib_prog/: Makefile.am  Makefile.in
docs/pod/vplot/: Makefile.am  Makefile.in
interact/: CMakeLists.txt  Makefile.am  configure.ac
interact/RickMovie/: CMakeLists.txt  Makefile.am  axis.h  color.h  colorbar.h  data.h  draw.h  help.h  main.h  map.h  movie.h  pick.h  pik.h  plane.h  rargs.h  region.h  render.h  section.h  sep_axis.c  sep_color.c  sep_colorbar.c  sep_data.c  sep_draw.c  sep_edit.c  sep_help.c  sep_main.c  sep_map.c  sep_movie.c  sep_pick.c  sep_pik.c  sep_plane.c  sep_region.c  sep_render.c  sep_section.c  sep_ui_canvas.c  sep_ui_menu.c  sep_ui_panel.c  sep_ui_window.c  sep_view.c  ui.h  (+1 more)
interact/Ricksep/: CMakeLists.txt  Makefile.am  ano.c  axis.c  axis.h  color.c  colorbar.c  data.c  data.h  draw.c  draw.h  dummy.c  edit.c  func.h  grab_param.c  help.c  main.c  main.h  map.c  movie.c  pick.c  pik.c  pik.h  plane.c  plane.h  region.c  region.h  render.c  rgrow.c  rick.h  rotated.c  search.c  section.c  semb.c  ui.h  ui_canvas.c  ui_menu.c  ui_panel.c  ui_window.c  view.c  (+1 more)
interact/include/: Makefile.am  sitedef.h.in
interact/m4/: ac_check_ftype.m4  ac_path_motif.m4  ac_path_motif_direct.m4  find_sep_arch.m4  sep_fc.m4  sep_lib_defs.m4
interact/qt_cube/: .Makefile.am.swo  .Makefile.am.swp  CMakeLists.txt  Makefile.am  Sep_cube  Sep_cube.py.in  autopick.h  centerwindow.cpp  cg.cpp  cube.cpp  cube_cut.cpp  fastmarch.cpp  lloyd.h  log  makefile  mouse_func.cpp  pick_draw.cpp  pick_new.cpp  seispak_reg_io.cpp  single.h  sregf.cpp  updater.cpp
java/: CMakeLists.txt  README.md
java/lib/: CMakeLists.txt
libs/seis/: CMakeLists.txt
libs/seis/dip/: CMakeLists.txt
libs/seis/filter/: CMakeLists.txt  sep_filter.f90  sinc.c
libs/seis/filter-cpp/: CMakeLists.txt  floatFilter.cpp  floatFilter.h  stack.cpp  stack.h  testFilter.cpp  testStack.cpp
libs/seis/image/: CMakeLists.txt  adcig.f90s
libs/seis/image-cpp/: CMakeLists.txt  kirchTime.cpp  kirchTime.h
libs/seis/model/: CMakeLists.txt  kernal.f90  kernal.f90s
libs/seis/model-cpp/: CMakeLists.txt  spike.cpp  spike.h  testSpike.cpp
libs/seis/travel/: CMakeLists.txt
libs/seis/velan-cpp/: ._CMakeLists.txt  ._nmo.cpp  nmo.cpp  (+8 more)
progs/vplot/: CMakeLists.txt
ratfor90/: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  ratfor90  ratfor90.pl.in
sep_python/: Makefile.am  Makefile.in  configure  configure.ac
sep_python/base/: Makefile.am  Makefile.in  log
sep_python/flows/: Makefile.am  Makefile.in
sep_python/include/: Makefile.am  Makefile.in  sitedef.h.in
sep_python/m4/: find_sep_arch.m4  python_devel.m4  swig.m4
sep_python/programs/: Makefile.am  Makefile.in
sep_python/seis/: Makefile.am  Makefile.in
sep_python/util/: Makefile.am  Makefile.in
seplib_base/: Makefile.am  Makefile.in  configure  configure.ac
seplib_base/include/: CMakeLists.txt  Makefile.am  Makefile.in  segy.h  segy.h.in  sep3d.h  sep_doc_it  sep_doc_it.pl.in  sep_main_external.h  sep_par.h  sep_pars_external.h  sepaux.h  sepconvert.h  sepcube.h  sepfft.h  seplib.h  sepmath.h  sepmathf.h  sergey_rsf.h  sitedef.h.in  su.h  su.h.in  sulib.h  superset.h
seplib_base/lib/: Makefile.am  Makefile.in
seplib_base/tools/: CMakeLists.txt  Makefile.am  Makefile.in
seplib_java/: aclocal.m4  configure.ac
seplib_java/lib/: Makefile.am  auxpar_jni.c  auxputch_jni.c  datapath_jni.c  doc_jni.c  fetch_jni.c  getch_jni.c  getnumberaxes_jni.c  getputaxis_jni.c  hclose_jni.c  hetch_jni.c  initpar_jni.c  noheader_jni.c  putch_jni.c  putlin_jni.c  redin_jni.c  redout_jni.c  sreed_jni.c  sreedwindow_jni.c  srite_jni.c  sritewindow_jni.c  sseek_jni.c  ssize_jni.c  tetch_jni.c
seplib_java/main/: Makefile.am
seplib_prog/: Makefile.am  Makefile.in  configure  configure.ac
seplib_prog/converters/: CMakeLists.txt  Makefile.am  Makefile.in
seplib_prog/include/: Makefile.am  Makefile.in  sep.main  sep.startup  sitedef.h.in
seplib_prog/m4/: ptrhread.m4
seplib_prog/seis/: Makefile.am  Makefile.in
seplib_prog/sep_graphics/: Box.csep  CMakeLists.txt  Contour.csep  Cubeplot.csep  Dip_azim.F90sep  Dip_azim.f90  Dots.csep  Ftplot.csep  Graph.csep  Grey.csep  Histogram.csep  Makefile.am  Makefile.in  Merge_field.csep  Operplot.csep  Overlay.csep  Seis_vel.F90sep  Ta2vplot.csep  Taplot.csep  Thplot.csep  Wiggle.csep
seplib_prog/util/: Makefile.am  Makefile.in
vplot/: Makefile.am  Makefile.in  configure  configure.ac
vplot/Docs/: Makefile.am  Makefile.in
vplot/cfortran/: Makefile.am  Makefile.in
vplot/filters/: CMakeLists.txt  Makefile.am  Makefile.in  init_vplot.c  init_vplot_SEP.c  main_vplot.c  main_vplot_SEP.c  proc_vplot.c
vplot/glplot/: Makefile  Makefile.am  gl_massage.c
vplot/include/: CMakeLists.txt  Makefile.am  Makefile.in  glplot.h  sitedef.h.in
vplot/libvplot/: CMakeLists.txt  Makefile.am  Makefile.in  name_to_coltab.c  vp_area.c  vp_endplt.c  vp_file.c  vp_rascol16tab.c  vp_rascoltab.c
vplot/m4/: ac_check_ftype.m4  ac_module_extensions_fc.m4  make_gmake.m4  sep_lib_defs.m4
vplot/util/: Makefile.am  Makefile.in
(+851 files in other folders)
